# ChemToolKit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Bindings/Python/: CMakeLists.txt  DataObjs.cpp  FileIO.cpp  ForceField.cpp  Graphics.cpp  Maths.cpp  Molecule.cpp
FileIO/: FileControl.cpp  FileControl.h  FileIO.h  FileIO_PDB.cpp  FileIO_PDB.h  FileIO_XYZ.cpp  FileIO_XYZ.h
ForceField/: AngleCalc.cpp  AngleCalc.h  BondCalc.cpp  BondCalc.h  ForceField.h  UFF.cpp  UFF.h  UFFParams.cpp
Maths/: Vector3.cpp
Molecule/: Angle.cpp  Angle.h  Atom.cpp  Atom.h  Bond.cpp  Bond.h  Molecule.cpp  Molecule.h
Resources/: UFF.prm
include/Data/: Atom.h  AtomicData.h  Face.h  HalfEdge.h  Model.h  Molecule.h  Surface.h  Vertex.h  VolumeData.h  api.h
include/FileIO/: FileControl.h  FileIO.h  FileIO_Mol2.h  FileIO_PDB.h  FileIO_XYZ.h
include/ForceField/: AngleCalc.h  BondCalc.h  ForceField.h  InversionCalc.h  NonBondCalc.h  TorsionCalc.h  UFF.h  UFFParams.h
include/GUI/: Interactor.h  ModelController.h  RenderWindow.h  api.h  utils.h
include/Maths/: Matrix33.h  Vector3.h
include/Molecule/: Atom.h  Molecule.h
src/Data/: Atom.cpp  Elements.cpp  Model.cpp  Molecule.cpp  Surface.cpp  VolumeData.cpp
src/FileIO/: FileControl.cpp  FileIO_Mol2.cpp  FileIO_PDB.cpp  FileIO_XYZ.cpp
src/ForceField/: AngleCalc.cpp  BondCalc.cpp  NonBondCalc.cpp  TorsionCalc.cpp  UFF.cpp  UFFParams.cpp
src/GUI/: ModelController.cpp  RenderWindow.cpp
src/Maths/: Matrix33.cpp  Vector3.cpp
src/Molecule/: Atom.cpp  Molecule.cpp
tests/: CMakeLists.txt  CTN.mol2  DataTest.cpp  FileIOTest.cpp  MathsTest.cpp  UFFtest.cpp  Water_Trimer.xyz  ala_phe_ala.xyz
tests/Resources/: CTN.mol2
